add high score functionality

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <!-- Section to hold instructions -->
             <section id="content" class="content"></section>
 
+            <!-- Section to hold endgame-->
+            <section id="end-game" class="end-game"></section>
+
             <!-- Section to hold answer buttons -->
             <section id="answer-btns" class="answer-btns"></section>
 
