fix high score display loop functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <p><a id="view-scores">View High Scores</a></p>
+        <p id="view-scores" class="view-scores">View High Scores</p>
         <p id="countdown">
             Time: <span id="timer">0</span>
         </p>
